plugins {
    id 'application'
    id 'net.nemerosa.versioning' version '2.8.2'
}

group 'de.melb00m'
version '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

jar {
    manifest {
        attributes(
                'Implementation-Version':   getArchiveVersion()
        )
    }
}

application {
    mainClassName 'de.melb00m.tr4o.app.Transparency4Ortho'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'commons-cli:commons-cli:1.4'
    implementation 'org.apache.commons:commons-collections4:4.4'
    implementation 'org.apache.commons:commons-lang3:3.10'
    implementation 'me.tongfei:progressbar:0.8.1'
    implementation 'org.apache.logging.log4j:log4j-api:2.13.2'
    implementation 'org.apache.logging.log4j:log4j-core:2.13.2'
    implementation 'com.typesafe:config:1.4.0'

    testImplementation 'junit:junit:4.13'

    runtime files('src/dist/config')
}
